CH-679/CH-681 change FavoriteProductDto